--- a/src/app/catalog/pages/product-details-page/product-details-page.component.scss
+++ b/src/app/catalog/pages/product-details-page/product-details-page.component.scss
@@ -75,3 +75,27 @@ section {
     }
   }
 }
+
+.favourite-btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 8px;
+  background-color: var(--theme-accent-blue);
+  height: 32px;
+  width: 32px;
+  cursor: pointer;
+  transition: all .3s ease-in-out;
+
+  svg {
+    stroke: var(--theme-light-blue);
+    fill: var(--theme-accent-blue);
+    transition: all .3s ease-in-out;
+  }
+
+  &.active {
+    svg {
+      fill: var(--theme-light-blue);
+    }
+  }
+}
