Добавил ссылку в категории

--- a/src/app/catalog/components/catalog-categories/categories.component.html
+++ b/src/app/catalog/components/catalog-categories/categories.component.html
@@ -9,12 +9,12 @@
   </li>
 </ul>
 <div class="categories__buttons">
-  <span class="light-blue-btn">
-    <svg width="25" height="24" fill="#253B6E"><use xlink:href="assets/icons/sprite.svg#icon-discount"></use></svg>
-    Акции
-  </span>
-  <span class="light-blue-btn">
+<!--  <span class="light-blue-btn">-->
+<!--    <svg width="25" height="24" fill="#253B6E"><use xlink:href="assets/icons/sprite.svg#icon-discount"></use></svg>-->
+<!--    Акции-->
+<!--  </span>-->
+  <a routerLink="/dashboard/bonus-card" class="light-blue-btn">
     <svg width="20" height="16" fill="#253B6E"><use xlink:href="assets/icons/sprite.svg#icon-card"></use></svg>
     Бонусная карта
-  </span>
+  </a>
 </div>
