Добавил статус, подредачил расположение кнопок в авторизации

--- a/src/app/auth/pages/auth-page/auth-page.component.html
+++ b/src/app/auth/pages/auth-page/auth-page.component.html
@@ -15,8 +15,10 @@
         {{ errorMessage }}
       </div>
 
-      <input class="blue-btn" type="submit" value="Войти"/> <br>
-      <input class="blue-btn" type="button" value="Регистрация" (click)="router.navigate(['auth', 'registration'])"/>
+      <div class="controls">
+        <input class="blue-btn" type="submit" value="Войти"/> <br>
+        <input class="blue-btn" type="button" value="Регистрация" (click)="router.navigate(['auth', 'registration'])"/>
+      </div>
     </form>
   </div>
 </div>
