--- a/src/app/dashboard/pages/order-history/order-history.component.html
+++ b/src/app/dashboard/pages/order-history/order-history.component.html
@@ -8,6 +8,7 @@
       <div class="user-order__item" *ngFor="let userOrder of orderHistory">
         <h3>Дата заказа: {{ userOrder.orderDateTime | date : 'dd.MM.yyyy в H:mm' }}</h3>
         <h3>Ожидаемая дата доставки: {{ userOrder.expectedDate | date : 'dd.MM.yyyy' }}</h3>
+        <h3>Статус: {{ userOrder.status }}</h3>
         <div class="user-order__item__products">
           <h3>Товары:</h3>
           <div *ngFor="let productOrder of userOrder.productOrder" class="user-order__item__products__item">
